<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:scrollbars="none"
    tools:context=".activities.AddPromoCodeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <include layout="@layout/toolbar_bar_menu" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tool_bar"
            android:background="@color/white"
            android:fitsSystemWindows="true"
            android:orientation="vertical"
            android:padding="@dimen/padd_15">


            <TextView
                style="@style/testMediumThirdStyle"
                android:layout_marginTop="15dp"
                android:text="@string/offer_name"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_offer_nm"
                style="@style/editTextstyle"
                android:background="@drawable/bg_white_box_with_gray"
                android:inputType="textCapSentences" />

            <TextView
                style="@style/testMediumThirdStyle"
                android:layout_marginTop="15dp"
                android:text="@string/promo_code"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_promo_code"
                style="@style/editTextstyle"
                android:background="@drawable/bg_white_box_with_gray"
                android:inputType="textCapSentences" />

            <TextView
                style="@style/testMediumThirdStyle"
                android:layout_marginTop="15dp"
                android:text="@string/amount_off"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_amount_off"
                style="@style/editTextstyle"
                android:background="@drawable/bg_white_box_with_gray"
                android:inputType="number" />

            <CheckBox
                android:id="@+id/cb_percentage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/percentage"
                android:textColor="@color/fill_text"
                android:textSize="11sp"
                android:textStyle="italic" />

            <TextView
                style="@style/testMediumThirdStyle"
                android:layout_marginTop="15dp"
                android:text="@string/limit_user"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_limit"
                style="@style/editTextstyle"
                android:background="@drawable/bg_white_box_with_gray"
                android:inputType="number" />

            <TextView
                style="@style/testMediumThirdStyle"
                android:layout_marginTop="15dp"
                android:text="@string/valid_date"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padd_5"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/ed_start_date"
                    style="@style/editTextstyle"
                    android:layout_marginEnd="@dimen/padd_10"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@drawable/bg_white_box_with_gray"
                    android:hint="@string/satrt_date"
                    android:inputType="number" />

                <TextView
                    android:id="@+id/ed_end_date"
                    style="@style/editTextstyle"
                    android:layout_marginStart="@dimen/padd_10"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:background="@drawable/bg_white_box_with_gray"
                    android:hint="@string/end_date"
                    android:inputType="number" />

            </LinearLayout>


            <Button
                android:id="@+id/btn_save"
                style="@style/buttonStyle"
                android:layout_marginTop="25dp"
                android:text="@string/save"
                android:textAllCaps="false" />

        </LinearLayout>
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>