<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/colorAccent"
    app:cardCornerRadius="20sp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            style="@style/testHeadingStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:maxLines="2"
            android:minHeight="60dp"
            android:padding="10dp"
            android:text="@string/add_category"
            android:textColor="@color/white"
            android:textSize="16sp" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ed_cate_nm"
            style="@style/editTextstyle"
            android:layout_below="@+id/tv_title"
            android:layout_margin="@dimen/padd_20"
            android:hint="@string/cate_name"
            android:inputType="textCapSentences" />

        <androidx.appcompat.widget.AppCompatEditText
            android:visibility="gone"
            android:id="@+id/ed_cate_slug"
            style="@style/editTextstyle"
            android:layout_below="@+id/ed_cate_nm"
            android:layout_marginStart="@dimen/padd_15"
            android:layout_marginEnd="@dimen/padd_15"
            android:layout_marginTop="@dimen/padd_10"
            android:layout_marginBottom="@dimen/padd_15"
            android:hint="@string/cate_slug"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="15sp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_cancel"
                style="@style/buttonStyle"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_submit"
                style="@style/buttonStyle"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>

    </RelativeLayout>


</androidx.cardview.widget.CardView>