<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:fitsSystemWindows="true"
    tools:context=".activities.ContactActivity">

    <include layout="@layout/toolbar_bar_menu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tool_bar"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/padd_20">

        <ImageView
            android:id="@+id/iv_req_call"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:background="@drawable/circle_gray_gradient"
            android:contentDescription="@null"
            android:padding="23dp"
            android:src="@drawable/ic_request_call" />

        <TextView
            android:id="@+id/tv_call_title"
            style="@style/testHeadingStyle"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:text="@string/request_call" />

        <TextView
            android:id="@+id/tv_call_descripation"
            style="@style/testHeadingNormalStyle"
            android:padding="5dp"
            android:text="@string/req_title"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/iv_cust_call"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/padd_15"
            android:background="@drawable/circle_gray_gradient"
            android:contentDescription="@null"
            android:padding="23dp"
            android:src="@drawable/ic_cust_info" />

        <TextView
            style="@style/testHeadingStyle"
            android:layout_marginTop="15dp"
            android:padding="5dp"
            android:text="@string/customer_support" />

        <TextView
            style="@style/testHeadingNormalStyle"
            android:padding="5dp"
            android:text="@string/cust_title"
            android:textSize="15sp" />
    </LinearLayout>
</RelativeLayout>