<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:scrollbars="none"
    tools:context=".activities.EditAddressActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <include layout="@layout/toolbar_bar_menu" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tool_bar"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                style="@style/testMediumThirdStyle"
                android:layout_marginTop="15dp"
                android:text="Full Name (First and Last name)"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_full_name"
                style="@style/editTextstyle"
                android:background="@drawable/bg_white_box_with_gray"
                android:hint="@string/fullname"
                android:inputType="text" />

            <TextView
                style="@style/testMediumThirdStyle"
                android:layout_marginTop="15dp"
                android:text="Street Address"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_street_add"
                style="@style/editTextstyle"
                android:background="@drawable/bg_white_box_with_gray"
                android:hint="2442  Columbia Boulevard"
                android:inputType="text" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_flat_no"
                style="@style/editTextstyle"
                android:background="@drawable/bg_white_box_with_gray"
                android:hint="3rd Floor, Suite name"
                android:inputType="text" />

            <TextView
                style="@style/testMediumThirdStyle"
                android:layout_marginTop="15dp"
                android:text="City"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_city"
                style="@style/editTextstyle"
                android:background="@drawable/bg_white_box_with_gray"
                android:hint="@string/city"
                android:inputType="text" />

            <TextView
                style="@style/testMediumThirdStyle"
                android:layout_marginTop="15dp"
                android:text="State / Province / Region"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_state"
                style="@style/editTextstyle"
                android:background="@drawable/bg_white_box_with_gray"
                android:hint="@string/state"
                android:inputType="text" />

            <TextView
                style="@style/testMediumThirdStyle"
                android:layout_marginTop="15dp"
                android:text="ZIP Code"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_zip_code"
                style="@style/editTextstyle"
                android:background="@drawable/bg_white_box_with_gray"
                android:hint="@string/zipcode"
                android:inputType="number" />

            <TextView
                style="@style/testMediumThirdStyle"
                android:layout_marginTop="15dp"
                android:text="Phone number"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/ed_phone"
                style="@style/editTextstyle"
                android:background="@drawable/bg_white_box_with_gray"
                android:hint="@string/phone"
                android:inputType="number" />

            <CheckBox
                android:visibility="gone"
                android:id="@+id/cb_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/make_default_address"
                android:textColor="#8B8B8B"
                android:textSize="11sp"
                android:textStyle="italic" />

            <Button
                android:id="@+id/btn_submit"
                style="@style/buttonStyle"
                android:layout_marginTop="25dp"
                android:text="@string/update"
                android:textAllCaps="false" />


        </LinearLayout>
    </RelativeLayout>
</androidx.core.widget.NestedScrollView>