<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_title"
            style="@style/testHeadingStyle"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_margin="10dp"
            android:text="@string/select_state"
            android:textColor="@color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/off_white" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_category"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            tools:itemCount="5"
            tools:listitem="@layout/custom_spinner"/>

        <View
            android:id="@+id/view_line"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/off_white" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:weightSum="3"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cancel"
                style="@style/testStyle"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/cancel" />
            <TextView
                android:id="@+id/tv_add"
                style="@style/testStyle"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/add" />
            <TextView
                android:id="@+id/tv_okey"
                style="@style/testStyle"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:gravity="center"
                android:text="@string/done" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>